# TimbreScribe

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  model-smoke.yml  windows-release.yml
benchmarks/: basic_pitch_cpu.py  project_archive.py  release_candidate.py  score_pipeline.py
docs/: ACCESSIBILITY_AND_DPI_REVIEW.md  ARCHITECTURE.md  ASSISTANT_PRIVACY.md  CLEAN_MACHINE_VALIDATION.md  MODEL_LICENSES.md  PROJECT_STATUS.md  RELEASE_CHECKLIST.md  SIGNING_AND_PUBLICATION.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/adr/: 0001-python-311-and-uv.md  0002-layered-architecture-and-worker-isolation.md  0003-music-time-uses-fraction.md  0004-musicxml-as-canonical-exchange-format.md  0005-verovio-local-rendering.md  0006-pyside6-widgets-ui.md  0007-project-archive-format.md  0008-engine-capabilities-and-jsonl-worker-protocol.md  0009-local-first-optional-llm.md  0010-third-party-license-manifest-policy.md  0011-verified-ffmpeg-and-content-addressed-media-cache.md  0012-verified-basic-pitch-onnx-worker.md  0013-verovio-toolkit-and-visual-export-pipeline.md  0014-command-editing-and-versioned-project-state.md  0015-gated-muscriptor-model-management.md  0016-deterministic-refinement-and-preview-synthesis.md  0017-schema-constrained-opt-in-assistant.md  0018-windows-onedir-and-per-user-installer.md  0019-versioned-windows-operator-evidence.md  0020-authenticode-and-gated-publication.md  0021-private-unsigned-candidate-scope.md
docs/benchmarks/: PHASE_5_MUSCRIPTOR_ACCEPTANCE.md  PHASE_6_BASELINE.md  PHASE_8_RELEASE_CANDIDATE.md
docs/releases/: v0.9.0.md
packaging/pyinstaller/: TimbreScribe.spec
packaging/scripts/: build_installer.ps1  build_onedir.ps1  create_release_archive.py  finalize_windows_release.py  generate_release_manifest.py  record_windows_acceptance.ps1  sign_windows_artifacts.ps1  stage_release_licenses.py  test_installer.ps1  test_windows_uia.ps1  validate_windows_acceptance.py
packaging/windows/: TimbreScribe.iss  windows-acceptance-answers.example.json
src/timbrescribe/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  factories.py  media_factories.py
tests/contract/: test_protocol.py
tests/fixtures/: __init__.py  basic_pitch_stub_worker.py
tests/golden/: minimal_score.musicxml
tests/gui/: test_assistant_workflow.py  test_basic_pitch_workflow.py  test_dpi_smoke.py  test_editing_workflow.py  test_main_window.py  test_media_workflow.py  test_muscriptor_workflow.py  test_verovio_view.py
tests/integration/: test_ffmpeg_media.py  test_mock_worker.py  test_muscriptor_installer_process.py  test_muscriptor_process.py  test_verovio_exports.py
tests/model/: test_basic_pitch_model.py  test_muscriptor_model.py
tests/packaging/: test_onedir_smoke.py
tests/unit/: test_assistant.py  test_basic_pitch_compatibility.py  (+28 more)
tools/: run_quality.ps1  setup_basic_pitch.ps1  setup_ffmpeg.ps1  setup_muscriptor.ps1  validate_musicxml_xsd.ps1  verify_basic_pitch.py  verify_muscriptor.py
(+135 files in other folders)
